--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-body{
-    background-color: red;
+
+#my-table{
+    margin-left: 150px;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 520px;
 }
+
+.cell{
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    background-color: #7FFFD4;
+}
+
+.clicked{
+    background-color: lightblue;
+}
+
